# SimpleSystems

./: .gitignore  README.md
docs/: OS.txt  currentChallenges.txt  machineCode.txt  rules.txt
files/: file.txt
include/: bit.h  controller.h  hardware.h  os.h  pc.h  process.h  ram64.h  register.h
source/: arithmetic.cpp  bit.cpp  computer.cpp  computer.h  hardware.h  main.cpp  pc.cpp  ram.cpp  ram.h  ram8.cpp  ram8.h
src/: CMakeLists.txt
src/hardware/: computer.cpp  controller.cpp  cpu.cpp  cpu.h  hardware.cpp  int.cpp  int.h  pc.cpp  ram.cpp  ram4k.cpp  ram4k.h  ram512.cpp  ram512.h  ram64.cpp  register.cpp
src/os/: os.cpp  os.h  process.cpp  process.h
src/run/: main.cpp
